@@ -1,3 +1,10 @@
+2005-02-02  Tor Lillqvist  <tml@novell.com>
+
+	* glib/gstdio.c: In the Win32 part of all functions, handle
+	invalid UTF-8 more robustly. Don't pass the resulting NULL
+	wide-char or codepage strings on to C library functions, but bail
+	out early. (#166084)
+
 2005-02-02  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/gutils.c: Move doc comments inline.
